loombok, thymeleaf fragments and small changes

--- a/collecor/src/main/resources/static/css/navbar.css
+++ b/collecor/src/main/resources/static/css/navbar.css
@@ -40,4 +40,12 @@
     background-color: silver;
     border: #ccc 1px solid;
     margin-right: 5px;
-}  
+}
+#btnLogin{
+    color: #C6DDFF;
+    cursor: pointer;
+}
+#btnSigin{
+    color: #C6DDFF;
+    cursor: pointer;
+}
