--- a/collecor/src/main/resources/templates/profile.html
+++ b/collecor/src/main/resources/templates/profile.html
@@ -18,22 +18,22 @@
     <!--pageContent-->
     <div class="card">
       <img  class="card-img-top" src="imgs\perfil\black.jpeg" alt="capa">
-      <div class="card-body">
+      <div class="card-body card-background">
         <div class="d-flex justify-content-center">
           <img class="rounded-circle profile" src="imgs/perfil/foto.jpeg" alt="">
         </div>
         <div class="d-flex justify-content-center">
-          <a href="javascript:void(0)" class="btn rounded-pill">Seguir</a>
+          <a href="javascript:void(0)" class="btn rounded-pill" style="height: 50px; width: 150px; font-size: 23px;">Seguir</a>
         </div>
         <div class="d-grid gap-1 pt-4 text-center">
-          <h3 class="m-b-0">Hanna Jackson</h3>
-          <p>Web Designer &amp; Developer</p>
+          <p class="m-b-0 text-profile" style="font-size: 60px;">Hanna Jackson</p>
+          <p class="text-profile"style="font-size: 20px;">Web Designer &amp; Developer</p>
         </div>
       </div>
     </div>
     
     <div class="mt-3 strip">
-      <h3 class="px-2 py-1 fs-2 fw-bold">Criações</h3>
+      <h3 class="px-2 py-1 fs-2 fw-bold text-white">Criações</h3>
     </div>
 
     <!--Content-Content-->
