--- a/collecor/src/main/resources/static/css/navbar.css
+++ b/collecor/src/main/resources/static/css/navbar.css
@@ -1,26 +1,13 @@
 .container {
     max-width: 960px;
 }
-.navbar-survival101 {
-    background-color:#041642;
+.navbar {
+    background-color:#01002A;
+    height: 65px;
+    flex-shrink: 0;
 }
-.navbar-survival101 .navbar-brand {
-    margin-right: 2.15rem;
-    padding: 3px 0 0 0;
-    line-height: 36px;
-}  
 .navbar-expand-lg .navbar-nav .nav-link {
     color: #fff;
-}
-@media (min-width: 992px) {
-    .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: .7rem;
-    padding-left: .7rem;
-    }
-    
-    .search-box {
-    width: 300px !important;
-    }
 }
 .caroulsel {
     width: 100%;
@@ -48,4 +35,12 @@
 #btnSigin{
     color: #C6DDFF;
     cursor: pointer;
+}
+a{
+    color: #FFF;
+    font-family: Nunito;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-decoration-line: underline;
 }
