--- a/collecor/src/main/resources/templates/loja.html
+++ b/collecor/src/main/resources/templates/loja.html
@@ -16,126 +16,16 @@
   </head>
   <body>
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-survival101 p-">
-      <div class="container ">
-        
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        
-        <div class="container p-1">
-          <div class="collapse navbar-collapse" id="navbarColor02">
-            <div class="container">
-              <ul class="navbar-nav justify-content-center">
-                <li class="nav-item active">
-                  <a class="nav-link " href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link border-bottom border-danger" href="#">Loja</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="favoritos.html">Favoritos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="perfil.html">Perfil <i class="ion-ios-arrow-down"></i></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Sobre <i class="ion-ios-arrow-down"></i></a>
-                </li>
-                <li class="nav-item position-absolute end-0 ">
-                  <a class="nav-link" id="btnLogin" style="color: #C6DDFF; cursor: pointer;">LOGIN <i class="ion-ios-arrow-down"></i></a>
-                </li>
-                <li class="nav-item position-absolute end-0 mx-5">
-                  <a class="nav-link mx-3" id="btnSigin" style="color: #C6DDFF; cursor: pointer;">SIGIN <i class="ion-ios-arrow-down"></i></a>
-                </li>
-                <div id="loginModal" class="modal">
-                  <!-- Modal content login -->
-                  <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <div class="container">
-                        <div class="row">
-                          <div class="col-md-6 offset-md-3">
-                            <div class="card my-5">
-                    
-                              <form class="card-body cardbody-color p-lg-5">
-                    
-                                <div class="text-center">
-                                  <img src="https://cdn.pixabay.com/photo/2016/03/31/19/56/avatar-1295397__340.png" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
-                                    width="200px" alt="profile">
-                                </div>
-                    
-                                <div class="mb-3">
-                                  <input type="text" class="form-control" id="Username" aria-describedby="emailHelp"
-                                    placeholder="Usuario">
-                                </div>
-                                <div class="mb-3">
-                                  <input type="password" class="form-control" id="password" placeholder="Senha">
-                                </div>
-                                <div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100">Entrar</button></div>
-                                <!--<div id="emailHelp" class="form-text text-center mb-5 text-dark">Not
-                                  Registered? <a href="#" class="text-dark fw-bold"> Create an
-                                    Account</a>
-                                </div>-->
-                              </form>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                  </div>
-                </div>
-                <div id="siginModal" class="modal">
-                  <div class="modal-content">
-                    <span class="close2 close">&times;</span>
-                    <div class="container">
-                      <div class="row">
-                        <div class="col-md-6 offset-md-3">
-                          <div class="card my-5">               
-                            <form class="card-body cardbody-color p-lg-5">
-                              <div class="text-center">
-                                <img src="https://cdn.pixabay.com/photo/2016/03/31/19/56/avatar-1295397__340.png" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
-                                  width="200px" alt="profile">
-                              </div>
-                  
-                              <div class="mb-3">
-                                <input type="text" class="form-control" id="username" aria-describedby="emailHelp"
-                                  placeholder="Usuario">
-                              </div>
-                              <div class="mb-3">
-                                <input type="text" class="form-control" id="email" placeholder="Email" pattern=".*@.*">
-                              </div>
-                              <div class="mb-3">
-                                <input type="password" class="form-control" id="password" aria-describedby="emailHelp"
-                                  placeholder="Senha">
-                              </div>
-                              <div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100">Cadastrar</button></div>
-                              <!--<div id="emailHelp" class="form-text text-center mb-5 text-dark">Not
-                                Registered? <a href="#" class="text-dark fw-bold"> Create an
-                                  Account</a>
-                              </div>-->
-                            </form>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div> 
-                </div>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>   
-    </nav>
-    
+    <div th:replace="~{fragments :: navbar}"></div>
     <!--pageContent-->
-    <div class="row mx-0 px-0">
+    <div class="row">
         <!--tabBar-->
-        <div class="col-1 p-1" style="background-color: #083470;">
+        <div class="col-1 p-1 tabbar">
           <div class="col-12">
-            <img src="imgs/favoritos/logo.png" class="img- fluid rounded float-start" style="width: 100%;">
+            <img src="imgs/favoritos/logo.png" class="img-fluid rounded float-start">
           </div>
           <div class="col-12">       
-            <div class="d-grid gap-2" style="width: 100%;">
-              <br>
+            <div class="d-grid gap-2 tab-buttons">
               <button type="button" class="btn py-0 btn-tab">Livros</button>
               <button type="button" class="btn py-0 btn-tab">Imagens</button>
               <button type="button" class="btn py-0 btn-tab">Videos</button>
@@ -148,13 +38,13 @@
         <!--content-->
         <div class="col-11 pt-3 px-0" style="margin: 0px;"> 
           <!--searchbox-->
-          <div class="row height justify-content-center">
+          <div class="row height justify-content-center mb-5">
             <div class="col-md-6">
               <div class="search">
-                <input type="text" class="form-control form-input rounded-pill" placeholder="Encontrar algo..." style="background-color: #549FC1;">
+                <input type="text" class="form-control form-input rounded-pill" placeholder="Encontrar algo...">
                 <button class="btn btn-primary rounded-pill">Pesquisar</button>
               </div>
-            </div>  
+            </div>
           </div>
           <div class="colunmn col">
             <!--content-content-->
@@ -239,14 +129,13 @@
               </ul>
             </div>
           </div>
-        </div>
+          </div>
       </div>
     <!--footer-->
-    <footer class="position-sticky bg-dark text-white text-center p-1" style="position: fixed; left: 0; bottom: 0;" >
-        <h6>Copyright by Thiago da Silva Lima and colaborators</h6>
-    </footer>
+    <div th:replace="~{fragments :: footer}"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="js/loginpopup.js"></script>
+
   </body>
 </html>
