--- a/collecor/src/main/resources/templates/fragments.html
+++ b/collecor/src/main/resources/templates/fragments.html
@@ -30,7 +30,7 @@
                     <a class="nav-link btnperfil" href="/perfil">Perfil <i class="ion-ios-arrow-down"></i></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link btnsobre" href="#">Sobre <i class="ion-ios-arrow-down"></i></a>
+                    <a class="nav-link btnsobre" href="/sobre">Sobre <i class="ion-ios-arrow-down"></i></a>
                   </li>
                   <li class="nav-item position-absolute end-0 mx-3 ">
                     <a class="nav-link" id="btnLogin">LOGIN <i class="ion-ios-arrow-down"></i></a>
