--- a/collecor/src/main/resources/templates/fragments.html
+++ b/collecor/src/main/resources/templates/fragments.html
@@ -118,7 +118,7 @@
     </div>
     <div th:fragment = "footer">
         <!--footer-->
-        <footer class="position-sticky bg-black text-white text-center p-1">
+        <footer class="position-sticky text-white text-center p-1" style="background-color: black;">
             <h6>Copyright by Thiago da Silva Lima and colaborators</h6>
         </footer>
     </div>
