--- a/collecor/src/main/resources/templates/sobre.html
+++ b/collecor/src/main/resources/templates/sobre.html
@@ -20,140 +20,142 @@
 
     <center><h2>Objetivos</h2></center><br>
 
-    <center><div class="text-center px-5 py-1" id="copy">
-    <p class="m-0">Site Collector provides a cloud-native data platform for ingesting data from on-premises log sources and active directories into Exabeam SaaS cloud with easy onboarding process, 
-        monitoring, and management through centralized cloud user interface.<br>
-        Site Collector collects messages, transfers, persists, and securely uploads event data; and connects to the Exabeam Security Operations Platform. Site Collector is the managed entry point for logs to be routed to other processing tools, 
-        such as Advanced Analytics, Data Lake, Incident Responder, and Case Manager in the Exabeam Security Management Platform. Site collectors gather logs from external servers, systems, and data centers.</p></div></center>c
+    <center>
+        <div class="text-center px-5 py-1" style="background-color: #1E1455;" id="copy">
+            <p class="m-0 text-white">Site Collector provides a cloud-native data platform for ingesting data from on-premises log sources and active directories into Exabeam SaaS cloud with easy onboarding process, 
+            monitoring, and management through centralized cloud user interface.<br>
+            Site Collector collects messages, transfers, persists, and securely uploads event data; and connects to the Exabeam Security Operations Platform. Site Collector is the managed entry point for logs to be routed to other processing tools, 
+            such as Advanced Analytics, Data Lake, Incident Responder, and Case Manager in the Exabeam Security Management Platform. Site collectors gather logs from external servers, systems, and data centers.</p>
+        </div>
+    </center>c
 
-            <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-            <center><h2>Colaboradores:</h2></center>
-<div class="content">
-    <div class="container">
-        
-        <!-- end row -->
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="text-center card-box">
-                    <div class="member-card pt-2" style="padding: 1px">
-                        <div class="thumb-lg member-thumb mx-auto"><img src="imgs\sobre\lady.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
-                        <div class="">
-                            <h4>Maria Eduarda Germano</h4>
-                            <p class="text-muted">Programadora web front-end, aprendiz de Bootstrap e html, vivendo em um mundo onde é considerada linda e cheirosa... Alone we are petals. United we are roses.  <a href="#" class="text-pink"></a></p>
-                        </div>
-                        
-                        <div class="mt-4">
-                            <div class="row">
-                               
+    <center><h2>Colaboradores:</h2></center>
+    <div class="content">
+        <div class="container"> 
+            <!-- end row -->
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="text-center card-box">
+                        <div class="member-card pt-2" style="padding: 1px">
+                            <div class="thumb-lg member-thumb mx-auto"><img src="imgs\sobre\lady.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
+                            <div class="">
+                                <h4>Maria Eduarda Germano</h4>
+                                <p class="text-muted">Programadora web front-end, aprendiz de Bootstrap e html, vivendo em um mundo onde é considerada linda e cheirosa... Alone we are petals. United we are roses.  <a href="#" class="text-pink"></a></p>
                             </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- end col -->
-            <div class="col-lg-4">
-                <div class="text-center card-box">
-                    <div class="member-card pt-2" style="padding: 1px;">
-                        <div class="thumb-lg member-thumb mx-auto"><img src="imgs/sobre/merida2.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
-                        <div class="">
-                            <h4>Ana Julia Moraes</h4>
-                            <p class="text-muted">Aprendiz de programação front-end, bootstrap, html e CSS, ajudante em horas vagas, que vive em um lugar que não tem liberdade...<br> A bird trapped in a cage.<a href="#" class="text-pink"></a></p>
-                        </div>
-                        
-                        <div class="mt-4">
-                            <div class="row">
+                            
+                            <div class="mt-4">
+                                <div class="row">
                                 
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- end col -->
-            <div class="col-lg-4">
-                <div class="text-center card-box">
-                    <div class="member-card pt-2" style="padding: 1px;">
-                        <div class="thumb-lg member-thumb mx-auto"><img src="imgs/sobre/ekko.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
-                        <div class="">
-                            <h4>Thiago Lima</h4>
-                            <p class="text-muted">Programador web full-stack, trabalho principalmente com java html e css, utilizando os
-                                 frameworks Springs (Spring boot e Spring Security) e Bootstrap<a href="#" class="text-pink"></a></p>
-                        </div>
-                       
-                        <div class="mt-4">
-                            <div class="row">
-                               
+                <!-- end col -->
+                <div class="col-lg-4">
+                    <div class="text-center card-box">
+                        <div class="member-card pt-2" style="padding: 1px;">
+                            <div class="thumb-lg member-thumb mx-auto"><img src="imgs/sobre/merida2.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
+                            <div class="">
+                                <h4>Ana Julia Moraes</h4>
+                                <p class="text-muted">Aprendiz de programação front-end, bootstrap, html e CSS, ajudante em horas vagas, que vive em um lugar que não tem liberdade...<br> A bird trapped in a cage.<a href="#" class="text-pink"></a></p>
+                            </div>
+                            
+                            <div class="mt-4">
+                                <div class="row">
+                                    
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- end col -->
-        </div>
-        <!-- end row -->
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="text-center card-box">
-                    <div class="member-card pt-2" style="padding: 1px;">
-                        <div class="thumb-lg member-thumb mx-auto"><img src="imgs/sobre/engenheiro.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
-                        <div class="">
-                            <h4>Rafael Miiller</h4>
-                            <p class="text-muted">Web Designer e programador front-end, aprendiz de HTML e CSS e Bootstrap, sendo um engenheiro trabalhador... <br>Buildin' a Sentry.<a href="#" class="text-pink"></a></p>
-                        </div>
-                       
-                        <div class="mt-4">
-                            <div class="row">
-                              
+                <!-- end col -->
+                <div class="col-lg-4">
+                    <div class="text-center card-box">
+                        <div class="member-card pt-2" style="padding: 1px;">
+                            <div class="thumb-lg member-thumb mx-auto"><img src="imgs/sobre/ekko.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
+                            <div class="">
+                                <h4>Thiago Lima</h4>
+                                <p class="text-muted">Programador web full-stack, trabalho principalmente com java html e css, utilizando os
+                                    frameworks Springs (Spring boot e Spring Security) e Bootstrap<a href="#" class="text-pink"></a></p>
+                            </div>
+                        
+                            <div class="mt-4">
+                                <div class="row">
+                                
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- end col -->
             </div>
-            <!-- end col -->
-            <div class="col-lg-4">
-                <div class="text-center card-box">
-                    <div class="member-card pt-2" style="padding: 1px;">
-                        <div class="thumb-lg member-thumb mx-auto"><img src="imgs/sobre/aisha.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
-                        <div class="">
-                            <h4>Lívia Sartori</h4>
-                            <p class="text-muted">Web Designer, programadora front-end, aprendiz de Bootstrap e CSS, vivendo em uma floresta afastada do mundo... <br>A white bird<a href="#" class="text-pink"></a></p>
-                        </div>
-                      
-                        <div class="mt-4">
-                            <div class="row">
-                              
+            <!-- end row -->
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="text-center card-box">
+                        <div class="member-card pt-2" style="padding: 1px;">
+                            <div class="thumb-lg member-thumb mx-auto"><img src="imgs/sobre/engenheiro.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
+                            <div class="">
+                                <h4>Rafael Miiller</h4>
+                                <p class="text-muted">Web Designer e programador front-end, aprendiz de HTML e CSS e Bootstrap, sendo um engenheiro trabalhador... <br>Buildin' a Sentry.<a href="#" class="text-pink"></a></p>
+                            </div>
+                        
+                            <div class="mt-4">
+                                <div class="row">
+                                
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- end col -->
-            <div class="col-lg-4">
-                <div class="text-center card-box">
-                    <div class="member-card pt-2" style="padding: 1px;">
-                        <div class="thumb-lg member-thumb mx-auto"><img src="imgs/sobre/anna.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
-                        <div class="">
-                            <h4>Jamile Vitoria</h4>
-                            <p class="text-muted">Web designer,   <a href="#" class="text-pink"></a></p>
-                        </div>
-                       
-                        <div class="mt-4">
-                            <div class="row">
-                               
+                <!-- end col -->
+                <div class="col-lg-4">
+                    <div class="text-center card-box">
+                        <div class="member-card pt-2" style="padding: 1px;">
+                            <div class="thumb-lg member-thumb mx-auto"><img src="imgs/sobre/aisha.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
+                            <div class="">
+                                <h4>Lívia Sartori</h4>
+                                <p class="text-muted">Web Designer, programadora front-end, aprendiz de Bootstrap e CSS, vivendo em uma floresta afastada do mundo... <br>A white bird<a href="#" class="text-pink"></a></p>
+                            </div>
+                        
+                            <div class="mt-4">
+                                <div class="row">
+                                
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- end col -->
+                <div class="col-lg-4">
+                    <div class="text-center card-box">
+                        <div class="member-card pt-2" style="padding: 1px;">
+                            <div class="thumb-lg member-thumb mx-auto"><img src="imgs/sobre/anna.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
+                            <div class="">
+                                <h4>Jamile Figueiredo</h4>
+                                <p class="text-muted">Aprendiz de programação front-end, bootstrap, html e CSS, ajudante em horas vagas, vivendo na inifidade... <br>we were infinite<a href="#" class="text-pink"></a></p>
+                            </div>
+                        
+                            <div class="mt-4">
+                                <div class="row">
+                                
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- end col -->
             </div>
-            <!-- end col -->
-        </div>
-       
+        
+                
+            </div>
             
         </div>
-        
-    </div>
-    <!-- container -->
-</div> 
+        <!-- container -->
+    </div> 
 
     <!--footer-->
     <div th:replace="~{fragments :: footer}"></div>
