--- a/collecor/src/main/resources/templates/sobre.html
+++ b/collecor/src/main/resources/templates/sobre.html
@@ -115,7 +115,7 @@
                 <div class="col-lg-4">
                     <div class="text-center card-box">
                         <div class="member-card pt-2" style="padding: 1px;">
-                            <div class="thumb-lg member-thumb mx-auto"><img src="imgs/sobre/aisha.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
+                            <div class="thumb-lg member-thumb mx-auto"><img src="imgs/sobre/furina.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
                             <div class="">
                                 <h4>Lívia Sartori</h4>
                                 <p class="text-muted">Web Designer, programadora front-end, aprendiz de Bootstrap e CSS, vivendo em uma floresta afastada do mundo... <br>A white bird<a href="#" class="text-pink"></a></p>
