correções e mudanças das cores do logn e sign in

--- a/collecor/src/main/resources/static/css/loja.css
+++ b/collecor/src/main/resources/static/css/loja.css
@@ -45,7 +45,7 @@ input[type="button"] {
 }
 .btn-tab{
   color: white;
-  background-color: #011444 !important;
+  background-color: #4B18B0 !important;
 }
 .btn-tab:hover{
   color: orange;
