--- a/collecor/src/main/resources/static/css/favoritos.css
+++ b/collecor/src/main/resources/static/css/favoritos.css
@@ -30,7 +30,6 @@ body{
   top: 20px;
   left: 16px;
 }
-
 .search button{
   position: absolute;
   top: 5px;
@@ -45,7 +44,7 @@ input[type="button"] {
 }
 .btn-tab{
   color: white;
-  background-color: #011444 !important;
+  background-color: #4B18B0 !important;
 }
 .btn-tab:hover{
   color: orange;
@@ -54,12 +53,6 @@ input[type="button"] {
 .btn-tab:focus{
   color: white;
   background-color: #60a4db;
-}
-footer{
-  height: 30px;
-}
-div{
-  border: #041642;
 }
 .row{
   --bs-gutter-x: 0;
