--- a/collecor/src/main/resources/templates/fragments.html
+++ b/collecor/src/main/resources/templates/fragments.html
@@ -16,7 +16,7 @@
           <div class="collapse navbar-collapse">
             <div class="navbar-nav">
               <div class="container">
-                <ul class="navbar-nav d-flex justify-content-center">
+                <ul class="navbar-nav d-flex">
                   <li class="nav-item active">
                     <a class="nav-link btnhome" href="#">Home</a>
                   </li>
@@ -46,10 +46,9 @@
                           <div class="row">
                             <div class="col-md-6 offset-md-3">
                               <div class="card my-5">
-                                <form class="card-body cardbody-color p-lg-5">
-                      
-                                  <div class="text-center d-flex justify-content-center">
-                                    <img src="https://cdn.pixabay.com/photo/2016/03/31/19/56/avatar-1295397__340.png" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
+                                <form class="p-lg-5" style="background-color: #01002A;">
+                                  <div class="text-center d-flex justify-content-center" >
+                                    <img src="imgs/compartilhadas/icone perfil padrao.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
                                       width="200px" alt="profile">
                                   </div>
                                   <div class="mb-3">
@@ -59,7 +58,7 @@
                                   <div class="mb-3">
                                     <input type="password" class="form-control" id="password" placeholder="Senha">
                                   </div>
-                                  <div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100">Entrar</button></div>
+                                  <div class="text-center"><button type="submit" class="btn btn-color btn-outline-success px-5 mb-5 w-100">Entrar</button></div>
                                   <!--<div id="emailHelp" class="form-text text-center mb-5 text-dark">Not
                                     Registered? <a href="#" class="text-dark fw-bold"> Create an
                                       Account</a>
@@ -78,13 +77,13 @@
                         <div class="row">
                           <div class="col-md-6 offset-md-3">
                             <div class="card my-5">              
-                              <form class="card-body cardbody-color p-lg-5" method="post" action="/users/insert">
+                              <form class="card-body cardbody-color p-lg-5" style="background-color: #01002A;" method="post" action="/users/insert">
                                 <div class="alert alert-success visually-hidden" role="alert">
                                   Cadastro concluido como sucesso
                                 </div>
                                 <div class="text-center d-flex justify-content-center">
-                                  <img src="https://cdn.pixabay.com/photo/2016/03/31/19/56/avatar-1295397__340.png" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
-                                    width="200px" alt="profile">
+                                  <img src="imgs/compartilhadas/icone perfil padrao.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
+                                      width="200px" alt="profile">
                                 </div>
                                 
                                 <div class="mb-3">
@@ -118,7 +117,7 @@
     </div>
     <div th:fragment = "footer">
         <!--footer-->
-        <footer class="position-sticky bg-black text-white text-center p-1">
+        <footer class="position-sticky text-white text-center p-1">
             <h6>Copyright by Thiago da Silva Lima and colaborators</h6>
         </footer>
     </div>
